--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
         android:layout_marginTop="12dp"
         android:autofillHints="5000"
         android:inputType="number"
+        android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spendAmount"
@@ -48,16 +49,17 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:autofillHints="5000"
+        android:inputType="text"
+        android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spendOn"
-        tools:ignore="LabelFor"
-        android:inputType="text" />
+        tools:ignore="LabelFor" />
 
     <Button
         android:id="@+id/add"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginTop="44dp"
         android:text="@string/add"
         app:layout_constraintEnd_toEndOf="parent"
@@ -66,13 +68,25 @@
 
     <Button
         android:id="@+id/analyze"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="192dp"
+        android:layout_height="48dp"
+        android:layout_marginEnd="4dp"
         android:text="@string/analysis"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/add"
+        app:layout_constraintVertical_bias="0.435" />
+
+    <Button
+        android:id="@+id/addNote"
+        android:layout_width="192dp"
+        android:layout_height="48dp"
+        android:text="@string/notes"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/analyze"
+        app:layout_constraintHorizontal_bias="0.258"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/add"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.437" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
