--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
-        android:text="Sign In"
+        android:text="@string/sign_in"
         android:textStyle="bold"
         app:icon="@drawable/googlelogo"
         app:iconGravity="start"
