--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,5 +4,5 @@
 
     <item
         android:id="@+id/miLogout"
-        android:title="Logout" />
+        android:title="@string/logout1" />
 </menu>
