--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
         android:autofillHints="5000"
         android:inputType="number"
         android:minHeight="48dp"
+        android:hint="@string/thousand"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spendAmount"
@@ -50,6 +51,7 @@
         android:layout_marginTop="12dp"
         android:autofillHints="5000"
         android:inputType="text"
+        android:hint="@string/travel"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
