--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -22,6 +22,7 @@
             app:layout_constraintVertical_bias="0.0" />
 
         <TextView
+            android:id="@+id/dates"
             android:layout_width="wrap_content"
             android:layout_height="17dp"
             android:textAlignment="center"
