--- a/app/src/main/res/layout/activity_notes.xml
+++ b/app/src/main/res/layout/activity_notes.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Notes">
+    tools:context=".Notes"
+    android:background="@color/orangeShade">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
@@ -19,8 +20,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/fab"
+        app:backgroundTint="@android:color/holo_red_light"
         android:src="@drawable/ic_baseline_add_24"
+        app:rippleColor="@android:color/holo_red_dark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_margin="24dp" />
+        android:layout_margin="24dp"
+        android:contentDescription="@string/adding_note" />
 </androidx.constraintlayout.widget.ConstraintLayout>
