--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,7 @@
     <color name="darkRed">#520303</color>
     <color name="darkOrange">#944503</color>
     <color name="mainScreen">#FFFFFF</color>
+    <color name="darkGreen">#234F1E</color>
+    <color name="lightGreen">#BDF379</color>
 
 </resources>
