--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,8 +49,9 @@
         android:layout_width="192dp"
         android:layout_height="48dp"
         android:layout_marginEnd="4dp"
-        android:text="@string/analysis"
         android:backgroundTint="@android:color/holo_green_dark"
+        android:text="@string/analysis"
+        android:textColor="#212121"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/add"
@@ -93,6 +94,7 @@
         android:autofillHints="5000"
         android:inputType="text"
         android:minHeight="48dp"
+        android:contentDescription="@string/all_the_spends"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
